[package]
name = "turmoil"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Create git tag
version = "0.6.5"
edition = "2021"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
description = "Simulation testing framework for distributed systems"
homepage = "https://github.com/tokio-rs/turmoil"
repository = "https://github.com/tokio-rs/turmoil"
readme = "README.md"
keywords = ["Deterministic", "Simulation", "Testing"]
categories = ["asynchronous", "network-programming", "simulation"]

[workspace]
members = ["examples/*"]

[dependencies]
bytes = "1.4"
cfg-if = "1.0.0"
indexmap = "2"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
regex = { version = "1", optional = true }
scoped-tls = "1.0.1"
tracing = "0.1"



# not wasm32 with target.cfg
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2.15", features = ["js"] }
tokio = { workspace = true, features = ["rt", "sync", "time", "test-util"], default-features = false }
web-time = "1.1.0"
web-sys = { version = "0.3.77", features = ["Window"] }
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
doc-comment = "0.3.3"
regex = "1"
tokio-test = "0.4.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
regex = ["dep:regex"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.dependencies]
tokio = "1.43.0"
