[package]
name = "turmoil"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Create git tag
version = "0.7.1"
edition = "2021"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
description = "Simulation testing framework for distributed systems"
homepage = "https://github.com/tokio-rs/turmoil"
repository = "https://github.com/tokio-rs/turmoil"
readme = "README.md"
keywords = ["Deterministic", "Simulation", "Testing"]
categories = ["asynchronous", "network-programming", "simulation"]

[workspace]
members = ["examples/*"]

[dependencies]
bytes = "1.4"
indexmap = "2"
rand = "0.9"
rand_distr = "0.5"
regex = { version = "1", optional = true }
scoped-tls = "1.0.1"
tokio = { version = "1.25.0", features = ["full", "test-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
doc-comment = "0.3.3"
regex = "1"
test-case = "3"
tokio-test = "0.4.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
regex = ["dep:regex"]
unstable-fs = []
unstable-barriers = ["dep:uuid"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "bytes::*",
  "tokio::*",
]
