[package]
name = "wasm-test"
version = "0.1.0"
authors = ["Turmoil Contributors"]
edition = "2021"

[workspace]

[dependencies]
wasm-bindgen = "0.2"
turmoil = { path = ".." }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
