[package]
name = "turmoil-fs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
description = "Simulated filesystem for testing"
homepage = "https://github.com/tokio-rs/turmoil"
repository = "https://github.com/tokio-rs/turmoil"
readme = "README.md"
keywords = ["Deterministic", "Simulation", "Testing"]
categories = ["asynchronous", "filesystem", "simulation"]

[dependencies]
bytes = "1.4"
indexmap = "2"
rand = "0.9"
rand_distr = "0.5"
tokio = { version = "1.25.0", features = ["fs", "io-util", "sync", "time"] }
tracing = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
