[package]
name = "turmoil"
version = "0.7.2"
edition = "2021"
license = "MIT"
authors = ["Tokio Contributors <team@tokio.rs>"]
description = "Simulation testing framework for distributed systems"
homepage = "https://github.com/tokio-rs/turmoil"
repository = "https://github.com/tokio-rs/turmoil"
readme = "README.md"
keywords = ["Deterministic", "Simulation", "Testing"]
categories = ["asynchronous", "network-programming", "simulation"]

[dependencies]
bytes = "1.4"
indexmap = "2"
rand = "0.9"
rand_distr = "0.5"
regex = { version = "1", optional = true }
scoped-tls = "1.0.1"
tokio = { version = "1.25.0", features = [
    "fs", "io-util", "io-std", "macros", "net", "process",
    "rt", "rt-multi-thread", "signal", "sync", "time", "test-util",
] }
tracing = "0.1"
turmoil-fs = { version = "0.1.0", path = "../turmoil-fs", optional = true }
turmoil-io-uring = { version = "0.1.0", path = "../turmoil-io-uring", optional = true, features = ["fs"] }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
regex = "1"
test-case = "3"
tokio-test = "0.4.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
io-uring = "0.7"
tempfile = "3"

[features]
default = []
regex = ["dep:regex"]
unstable-fs = ["dep:turmoil-fs"]
unstable-io_uring = ["unstable-fs", "dep:turmoil-io-uring"]
unstable-barriers = ["dep:uuid"]
# Dev-only: opts into running the io_uring conformance suite against
# the real Linux kernel ring (in addition to the sim arm). Enables the
# `io-uring` dev-dependency so the conformance tests can submit SQEs
# to a real `IoUring`. Requires `target_os = "linux"`.
real-uring-conformance = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tokio_unstable)',
    'cfg(parity_io_uring)',
] }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "bytes::*",
  "tokio::*",
  "turmoil_fs",
  "turmoil_fs::*",
  "turmoil_io_uring",
]
