[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1"
turmoil = { path = "../.." }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1"
tower = { version = "0.4.13", features = ["util"] }
pin-project-lite = "0.2"
