[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.13"
tokio = "1"
tonic = "0.12"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
turmoil = { path = "../.." }

[build-dependencies]
tonic-build = "0.12.3"
protox = "0.7"
prost = "0.13"
