[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.14"
tokio = "1"
tonic = "0.14"
tonic-prost = "0.14"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turmoil = { path = "../.." }

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9"
